# Timing_simulation

./: .bo_cache_laplace.pkl  .smart_clustering_cache.pkl  .smart_v2_cache.pkl  .test_multi_model_cache.pkl  agent_comparison.py  allocation_curves.py  compute_model_separability.py  demo_model_separability.py  forced_block_bo.py  main.py  model_3_4_5_separation.md  numerical_check_models.py  optimize_mc_params.py  optimize_measurement_times.py  pair_reweighting.py  plot_model_separability.py  pyproject.toml  refine_top_candidates.py  resume.md  setup_env.cmd  setup_env.ps1  smart_clustering_opti.py  smart_v2.py  stimuli_range_optimisation.py  test.py  test_MAGNETO.py  test_cluster_opti.py  test_hierarchical_opti.py  test_jac.py  test_multi_model.py  test_multi_model_bo copy.py  test_multi_model_bo-GAMING.py  test_multi_model_bo.py  test_multi_model_bo_old.py  test_multi_model_bo_v5.py  todo.txt  version_1.py  version_2.py
design_optimizer/: __init__.py  base.py  fisher.py  jeffreys.py  laplace_jsd.py
diag/: __init__.py  plot.py
functions/: __init__.py  function_spec.py  h_actions.py  h_linear_exp.py
prompts/: adaptive_mc_prompt.txt
recode/: chat_summary.md  check_jacobian.py  recode_guide.md  recode_steps.md  test_chernoff_quick.py
recode/design/: __init__.py  actions.py  build.py  measurement.py
recode/design_optimizer/: base.py  dsj.py  laplace.py  laplace_chernoff.py  source_summary.md
recode/models/: h_actions.py
recode/plotting/: summary.py
recode/report/: chernoff_bound.md  recode_progress.html  recode_progress.qmd
simulation/: __init__.py  draw.py
(+3 files in other folders)
