[project]
name = "simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "cloudpickle>=3.1.2",
    "scipy>=1.16.3",
]
